Visual correction with model design: -alignment of circles, photos, wrappers changed -circles size changed -distance betweeen elements changed - font-size, styles corrected -animation speed increase - reduce amount of empty projects

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,7 +5,7 @@
     .main-blog__wrapper,
     .main-projects__wrapper,
     .main-tools__wrapper {
-        padding: 20px 140px 20px 140px;
+        padding: 30px 110px 20px 160px;
     }
 
     .main-contact-form__item {
@@ -15,11 +15,6 @@
     .main-contact-form__message {
         max-width: 100%;
         max-height: 300px;
-    }
-
-    .main-tools__wrapper {
-        overflow-x: hidden;
-        overflow-y: hidden;
     }
 }
 
